# kubernetes-validate

./: .gitignore  .gitmodules  Dockerfile  LICENSE  MANIFEST.in  README.md  entrypoint.sh  pyproject.toml  setup.cfg  setup.py  test-deps.txt  tox.ini  types-deps.txt
.github/workflows/: publish.yml  test-installs.yml  tox.yaml
examples/: kuard-all.yaml  kuard-extra-property.yaml  kuard-invalid-type.yaml  kuard-made-up-kind.yaml
src/kubernetes_validate/: __init__.py  __main__.py  utils.py  version.py
src/kubernetes_validate/kubernetes-json-schema/v1.10.0-local-strict/: clusterrolebinding-rbac-v1beta1.json  customresourcedefinitionspec-apiextensions-v1beta1.json  deploymentlist-apps-v1beta1.json  deploymentlist-extensions-v1beta1.json  deploymentspec-extensions-v1beta1.json  ingressstatus-extensions-v1beta1.json  jobspec-batch-v1.json  jsonschemaprops-apiextensions-v1beta1.json  jsonschemapropsorbool-apiextensions-v1beta1.json  localsubjectaccessreview-authorization-v1beta1.json  networkpolicy-extensions-v1beta1.json  networkpolicypeer-extensions-v1beta1.json  networkpolicyspec-extensions-v1beta1.json  podpreset-settings-v1alpha1.json  rolebinding-rbac-v1alpha1.json  scale-apps-v1beta1.json  selfsubjectaccessreview-authorization-v1beta1.json  statefulsetstatus-apps-v1beta1.json  storageclass-storage-v1.json  tokenreview-authentication-v1.json  tokenreviewstatus-authentication-v1beta1.json
test/: example.py
tests/: kuard-extra-property.yaml  kuard-invalid-type.yaml  kuard-made-up-kind.yaml  resource.yaml  test_validate_file.py  test_validate_resources.py
(+5699 files in other folders)
